TJ's collaboration changes

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Hey look, it's a readme file!
 ...and it was made by me, Luke Blechl
 the original owner of this file.
+
+These are TJ's changes to the README file
